--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>rpc-test</module>
         <module>rpc-provider</module>
         <module>rpc-test/rpc-test-scanner</module>
+        <module>rpc-protocol</module>
     </modules>
 
     <properties>
