--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>rpc-provider</module>
         <module>rpc-test/rpc-test-scanner</module>
         <module>rpc-protocol</module>
+        <module>rpc-serialization</module>
+        <module>rpc-codec</module>
     </modules>
 
     <properties>
