测试消费者发送消息

--- a/rpc-test/pom.xml
+++ b/rpc-test/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>rpc-test-scanner</module>
         <module>rpc-test-provider</module>
+        <module>rpc-test-consumer-codec</module>
     </modules>
 
     <dependencies>
