基于jdk代理,让远程调用变的像本地调用

--- a/rpc-test/pom.xml
+++ b/rpc-test/pom.xml
@@ -18,6 +18,7 @@
         <module>rpc-test-scanner</module>
         <module>rpc-test-provider</module>
         <module>rpc-test-consumer-codec</module>
+        <module>rpc-test-api</module>
     </modules>
 
     <dependencies>
