--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <commons-collections.version>3.2.2</commons-collections.version>
         <javassist.version>3.28.0-GA</javassist.version>
         <objenesis.version>3.4</objenesis.version>
-        <cglib.version>3.1</cglib.version>
+        <cglib.version>3.3.0</cglib.version>
         <commons.lang3.version>3.17.0</commons.lang3.version>
     </properties>
 
@@ -118,6 +118,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
