--- a/rpc-test/rpc-test-consumer/pom.xml
+++ b/rpc-test/rpc-test-consumer/pom.xml
@@ -3,30 +3,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ire</groupId>
-        <artifactId>yrpc</artifactId>
+        <artifactId>rpc-test</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rpc-test</artifactId>
+    <artifactId>rpc-test-consumer</artifactId>
     <packaging>pom</packaging>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <modules>
-        <module>rpc-test-scanner</module>
-        <module>rpc-test-provider</module>
-        <module>rpc-test-consumer</module>
-        <module>rpc-test-api</module>
+        <module>rpc-test-consumer-codec</module>
+        <module>rpc-test-consumer-handler</module>
     </modules>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>com.ire</groupId>
+            <artifactId>rpc-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
